--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,6 +13,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - name: Install build tools
+      run: sudo apt-get update && sudo apt-get install -y autoconf automake libtool
+    - name: Generate configure script
+      run: autoreconf -i
     - name: configure
       run: ./configure
     - name: make
