--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -14,14 +14,6 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Install build tools
-      run: sudo apt-get update && sudo apt-get install -y autoconf automake libtool
-    - name: Generate configure script
-      run: autoreconf -i
-    - name: configure
-      run: ./configure
+      run: sudo apt-get update && sudo apt-get install -y build-essential
     - name: make
       run: make
-    - name: make check
-      run: make check
-    - name: make distcheck
-      run: make distcheck
